--- a/Chat/MusicChat-vue/package.json
+++ b/Chat/MusicChat-vue/package.json
@@ -10,9 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "muse-ui": "^3.0.2",
-    "vue": "^2.5.2",
+    "vue": "^2.6.12",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
