--- a/Chat/MusicChat-vue/package.json
+++ b/Chat/MusicChat-vue/package.json
@@ -14,7 +14,9 @@
     "jquery": "^3.5.1",
     "muse-ui": "^3.0.2",
     "vue": "^2.6.12",
-    "vue-router": "^3.0.1"
+    "vue-autoscroll": "^1.2.1",
+    "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
